# sem3_lab2

./: CMakeLists.txt  lib.cpp  lib.h  main.cpp  tests.cpp
